<package>
  <name>cartesian_impedance_msgs</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="rkojcev@gmail.com">Risto Kojcev</maintainer>
  <description>
    cartesian_impedance_msgs
  </description>
  <author>Risto Kojcev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  <!-- You can specify that this package is a metapackage here: -->
  <!-- <metapackage/> -->

  <!-- Other tools can request additional information be placed here -->

</export>
</package>
