<package>
  <name>cartesian_trajectory_msgs</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>
  <description>

    cartesian_trajectory_msgs

  </description>
  <author>Konrad Banachowicz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
